data/derived/sp14/progs/unify/prog1275.ml.out
Characters 72-108:
  else (sumList (digitsOfInt n), count + 1);;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
